Fixed: Load a profile drown down not working on mobile/vertical layout.

--- a/src/main/resources/static/css/user/drop_down.css
+++ b/src/main/resources/static/css/user/drop_down.css
@@ -78,7 +78,6 @@
 	width: auto;
 	overflow: hidden;
 	padding: 0 10px;
-	z-index: 99;
 }
 
 .board {
